--- a/rocktaves2019.css
+++ b/rocktaves2019.css
@@ -1,3 +1,11 @@
+@keyframes slidedown{
+  0%{
+    top:-100vh;
+  }
+  100%{
+    top:0vh;
+  }
+}
 @keyframes glitch1 {
     0% {
       transform: none;
@@ -164,10 +172,9 @@
   }
   html {
     scroll-behavior: smooth;
-    overflow: -moz-scrollbars-none;
   } 
 body{
-    font-family: 'Roboto Condensed', sans-serif;
+   font-family: 'Roboto', sans-serif;
     margin:0 0 0 0;
     padding:0;
     overflow-x: hidden;
@@ -178,19 +185,17 @@ body{
 
  ::-webkit-scrollbar {
   display: none;}
-
-
 .oasislogo{
      position: absolute;
      left: 0px;
-     margin-left: 5vw;
+     margin-left: 2vw;
      margin-top:-1vh;
      width:250px;
      height:auto;
  }
 .header{
-    padding-top: 0vw;
-    height:5.5vw;
+    padding-top: 0vh;
+    height:5.5vh;
     padding-right: 2vw;
     text-align: right;
     width: 90vw;
@@ -200,20 +205,35 @@ body{
  .header span, .header input{
    display:none;
  }
-.nav{
+.links{
     display: inline-block;
     font-weight: 600;
     margin: 20px 0px 20px 20px;
-    padding-bottom: 8px;
+    padding-bottom: 0px;
     font-size: 23px;
     color: darkgray;
 }
-.nav:hover{
-    border-bottom: solid #44ABF7;
-    transition: all 0.1s ease-in-out;
-    opacity: 1;
-    color:white;
-    text-decoration: none;
+.nav{
+    position: relative;
+}
+.nav:after {    
+  background: none repeat scroll 0 0 transparent;
+  content: "";
+  margin-left:20px;
+  display: block;
+  height: 2px;
+  left:50%;
+  position: absolute;
+  background: #fff;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  width: 0;
+}
+.nav:hover:after { 
+  width: 90%;  
+  left:0;
+}
+.links:hover{
+  color:white;
 }
 .pg1{
     display: flex;
@@ -241,7 +261,6 @@ h1{
   position:relative;
   animation: glitch1 4s infinite;
 }
-
 h1:nth-child(2) {
     color: #67f3da;
     animation: glitch2 3.5s infinite;
@@ -298,14 +317,14 @@ h1:nth-child(2) {
     padding-bottom: 2vh;
     text-align: center;
     font-size: 70px;
-    font-family: 'Bebas Neue';
+    font-family:'Bebas Neue';
 }
 .aboutuscont{
     width: 80vw;
     line-height:35px;
     padding-top: 4vh; 
     text-align: center;
-    padding-bottom: 5vh;
+    padding-bottom: 2vh;
     font-size: 25px;
 }
 .video{
@@ -316,7 +335,7 @@ h1:nth-child(2) {
   width: 100%;
 }
 .video iframe{
-  border-radius: 3vw;
+  border-radius: 30px;
   width:40vw;
   height:22.5vw;
   margin: 2vh 0 10vh 0;
@@ -336,7 +355,6 @@ h1:nth-child(2) {
     padding-top: 6vh;
     text-align: center;
     font-size: 70px;
-    
     font-family: 'Bebas Neue';
 }
 .procedure{
@@ -456,18 +474,14 @@ h1:nth-child(2) {
         justify-content: center;
 }
 .contactushead{
-    width: 100vw;
-    padding-top: 4vh;
-    padding-bottom: 4vh;
-    text-align: center;
-    font-size: 70px;
-    font-family: 'Bebas Neue';
+  width: 100vw;
+  padding-top: 4vh;
+  padding-bottom: 4vh;
+  text-align: center;
+  font-size: 70px;
+  font-family: 'Bebas Neue';
 }
-.contactuscont{
-    padding-top: 4vh;
-    padding-bottom: 4vh;
-    font-size: 20px;
-}
+
 .contact{
   display: flex;
   width: 100vw;
@@ -494,7 +508,7 @@ h1:nth-child(2) {
   background-repeat: no-repeat;
  }
  .details{
-   margin-left: 10px;
+  margin-left: 10px;
    font-size: 30px;
    padding: 5vh; 
    text-align: center;
@@ -508,25 +522,15 @@ h1:nth-child(2) {
   }
 @media only screen and (max-width: 800px) 
   {
-
-    .video iframe{
-      border-radius: 3vw;
-      width:60vw;
-      height:30vw;
-      margin: 2vh 0 10vh 0;
-
-    }
-
     .oasislogo{
       position: absolute;
       left: calc(100% - 180px - 8vw);
-      margin-top:vh;
       width: 180px;
       height:auto;
   }
-    .nav
+    .links
     {
-        display: none;
+        display: block;
     }
     h1
     {
@@ -558,8 +562,8 @@ h1:nth-child(2) {
     width: 40px;
     height: 32px;
     position: absolute;
-    top:5px;
-    left:-5px;
+    top:20px;
+    left:-6px;
     cursor: pointer;
     opacity: 0;
     z-index: 2;
@@ -605,17 +609,18 @@ h1:nth-child(2) {
   }
   #menu
   {
+    display:block;
     position: absolute;
+    top:-100vh;
     width: calc(100vw - 50px);
-    height:auto;
+    height:0vh;
     margin: -100px 0 0 -50px;
     padding: 50px;
     padding-top: 125px;
     background: black;
     list-style-type: none;
-    display:none;
-    opacity:0;
-  }
+    
+    }
   .aboutushead{
     font-size:50px;
   }
@@ -673,13 +678,18 @@ h1:nth-child(2) {
     text-decoration: none;
   
   }
-  
+  .video iframe{
+    border-radius: 30px;
+    width:80vw;
+    height:45vw;
+    margin: 2vh 0 10vh 0;
+  }
   .header input:checked ~ #menu
   {
-    display:block;
-    height: 85vh;
-    opacity:1;
-  }
+    animation: slidedown 1s;
+    top:0vh;
+    height: 100vh;
+    }
   .nav:hover{
     border:none;
     color:white;
