--- a/rocktaves2019.css
+++ b/rocktaves2019.css
@@ -1,9 +1,9 @@
-@keyframes slidedown{
+@keyframes op{
   0%{
-    top:-100vh;
+    opacity:1;
   }
   100%{
-    top:0vh;
+    opacity:0;
   }
 }
 @keyframes glitch1 {
@@ -178,7 +178,7 @@ body{
     margin:0 0 0 0;
     padding:0;
     overflow-x: hidden;
-    width:100vw;
+    max-width: 100vw;
     
  }
 
@@ -410,7 +410,7 @@ h1:nth-child(2) {
     line-height: 25px;
     margin-top: 3%;
     font-size: 20px;
-    margin-right: 10vw;
+    padding-right: 10vw;
     text-align: left;
     margin-left:2vw;
     position:relative;
@@ -459,7 +459,7 @@ h1:nth-child(2) {
     
     font-size: 25px;
     margin-top: 3%;
-    margin-right: 8.5vw;
+    padding-right: 8.5vw;
     text-align: right;
     margin-left:10vw;
     position:relative;
@@ -497,7 +497,7 @@ h1:nth-child(2) {
 }
 .img {
   height: 100px;
-  margin-right: 10px;
+  margin-right: 0px;
   width: 100px;
   margin-top: 5vh;
   margin-bottom:5vh;
@@ -611,13 +611,14 @@ h1:nth-child(2) {
   {
     display:block;
     position: absolute;
-    top:-100vh;
-    width: calc(100vw - 50px);
-    height:0vh;
-    margin: -100px 0 0 -50px;
+    top:-110vh;
+    width: calc(100vw - 131px);
+    height:100vh;
+    margin: -100px 0 0 0px;
     padding: 50px;
     padding-top: 125px;
     background: black;
+    opacity:1;
     list-style-type: none;
     
     }
@@ -684,12 +685,6 @@ h1:nth-child(2) {
     height:45vw;
     margin: 2vh 0 10vh 0;
   }
-  .header input:checked ~ #menu
-  {
-    animation: slidedown 1s;
-    top:0vh;
-    height: 100vh;
-    }
   .nav:hover{
     border:none;
     color:white;
@@ -711,4 +706,3 @@ h1:nth-child(2) {
       font-size: 24px;
     }
   }
-
