--- a/rocktaves2019.css
+++ b/rocktaves2019.css
@@ -490,29 +490,13 @@ h1:nth-child(2) {
   justify-content: center;
   flex-direction: column;
 }
-.image{
-  width:50vw;
-  display: flex;
-  justify-content: flex-end;
-}
-.img {
-  height: 100px;
-  margin-right: 0px;
-  width: 100px;
-  margin-top: 5vh;
-  margin-bottom:5vh;
-  border-radius: 50%;
-  border: 9px solid #ffffff;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
- }
  .details{
   margin-left: 10px;
    font-size: 30px;
    padding: 5vh; 
    text-align: center;
  }
+ 
 @media only screen and (max-width: 1000px) 
   {
     h1
@@ -611,14 +595,14 @@ h1:nth-child(2) {
   {
     display:block;
     position: absolute;
-    top:-110vh;
-    width: calc(100vw - 131px);
+    left:-4vw;
+    top:-120vh;
+    width: 100vw;
     height:100vh;
-    margin: -100px 0 0 0px;
-    padding: 50px;
+    margin: 0px 0 0 0px;
+    padding: 0px;
     padding-top: 125px;
-    background: black;
-    opacity:1;
+    background: black; 
     list-style-type: none;
     
     }
@@ -633,10 +617,6 @@ h1:nth-child(2) {
   }
   .details{
     font-size: 15px;
-  }
-  .img{
-    width: 80px;
-    height:80px;
   }
   .roundshead{
     font-size:50px;
