--- a/rocktaves2019.css
+++ b/rocktaves2019.css
@@ -291,7 +291,8 @@ h1:nth-child(2) {
 .icons{ 
     position: absolute;
     display: block;
-    width: 100vw;
+    width: 100%;
+    left:0;
     bottom: 0px;
     padding-bottom: 1vw;  
 }
