--- a/rocktaves2019.css
+++ b/rocktaves2019.css
@@ -1,11 +1,3 @@
-@keyframes op{
-  0%{
-    opacity:1;
-  }
-  100%{
-    opacity:0;
-  }
-}
 @keyframes glitch1 {
     0% {
       transform: none;
@@ -172,30 +164,33 @@
   }
   html {
     scroll-behavior: smooth;
+    overflow: -moz-scrollbars-none;
   } 
 body{
-   font-family: 'Roboto', sans-serif;
+    font-family: 'Robot', sans-serif;
     margin:0 0 0 0;
     padding:0;
     overflow-x: hidden;
-    max-width: 100vw;
+    width:100vw;
     
  }
 
 
  ::-webkit-scrollbar {
   display: none;}
+
+
 .oasislogo{
      position: absolute;
      left: 0px;
-     margin-left: 5.5vw;
+     margin-left: 5vw;
      margin-top:-1vh;
      width:250px;
      height:auto;
  }
 .header{
-    padding-top: 0vh;
-    height:5.5vh;
+    padding-top: 0vw;
+    height:5.5vw;
     padding-right: 2vw;
     text-align: right;
     width: 90vw;
@@ -205,35 +200,20 @@ body{
  .header span, .header input{
    display:none;
  }
-.links{
+.nav{
     display: inline-block;
     font-weight: 600;
     margin: 20px 0px 20px 20px;
-    padding-bottom: 0px;
+    padding-bottom: 8px;
     font-size: 23px;
     color: darkgray;
 }
-.nav{
-    position: relative;
-}
-.nav:after {    
-  background: none repeat scroll 0 0 transparent;
-  content: "";
-  margin-left:20px;
-  display: block;
-  height: 2px;
-  left:50%;
-  position: absolute;
-  background: #fff;
-  transition: width 0.3s ease 0s, left 0.3s ease 0s;
-  width: 0;
-}
-.nav:hover:after { 
-  width: 90%;  
-  left:0;
-}
-.links:hover{
-  color:white;
+.nav:hover{
+    border-bottom: solid #44ABF7;
+    transition: all 0.1s ease-in-out;
+    opacity: 1;
+    color:white;
+    text-decoration: none;
 }
 .pg1{
     display: flex;
@@ -261,6 +241,7 @@ h1{
   position:relative;
   animation: glitch1 4s infinite;
 }
+
 h1:nth-child(2) {
     color: #67f3da;
     animation: glitch2 3.5s infinite;
@@ -291,8 +272,7 @@ h1:nth-child(2) {
 .icons{ 
     position: absolute;
     display: block;
-    width: 100%;
-    left:0;
+    width: 100vw;
     bottom: 0px;
     padding-bottom: 1vw;  
 }
@@ -318,14 +298,14 @@ h1:nth-child(2) {
     padding-bottom: 2vh;
     text-align: center;
     font-size: 70px;
-    font-family:'Bebas Neue';
+    font-family: 'Bebas Neue';
 }
 .aboutuscont{
     width: 80vw;
     line-height:35px;
     padding-top: 4vh; 
     text-align: center;
-    padding-bottom: 2vh;
+    padding-bottom: 5vh;
     font-size: 25px;
 }
 .video{
@@ -336,7 +316,7 @@ h1:nth-child(2) {
   width: 100%;
 }
 .video iframe{
-  border-radius: 30px;
+  border-radius: 3vw;
   width:40vw;
   height:22.5vw;
   margin: 2vh 0 10vh 0;
@@ -356,6 +336,7 @@ h1:nth-child(2) {
     padding-top: 6vh;
     text-align: center;
     font-size: 70px;
+    
     font-family: 'Bebas Neue';
 }
 .procedure{
@@ -411,7 +392,7 @@ h1:nth-child(2) {
     line-height: 25px;
     margin-top: 3%;
     font-size: 20px;
-    padding-right: 10vw;
+    margin-right: 10vw;
     text-align: left;
     margin-left:2vw;
     position:relative;
@@ -460,7 +441,7 @@ h1:nth-child(2) {
     
     font-size: 25px;
     margin-top: 3%;
-    padding-right: 8.5vw;
+    margin-right: 8.5vw;
     text-align: right;
     margin-left:10vw;
     position:relative;
@@ -475,14 +456,18 @@ h1:nth-child(2) {
         justify-content: center;
 }
 .contactushead{
-  width: 100vw;
-  padding-top: 4vh;
-  padding-bottom: 4vh;
-  text-align: center;
-  font-size: 70px;
-  font-family: 'Bebas Neue';
+    width: 100vw;
+    padding-top: 4vh;
+    padding-bottom: 4vh;
+    text-align: center;
+    font-size: 70px;
+    font-family: 'Bebas Neue';
 }
-
+.contactuscont{
+    padding-top: 4vh;
+    padding-bottom: 4vh;
+    font-size: 20px;
+}
 .contact{
   display: flex;
   width: 100vw;
@@ -491,13 +476,29 @@ h1:nth-child(2) {
   justify-content: center;
   flex-direction: column;
 }
+.image{
+  width:50vw;
+  display: flex;
+  justify-content: flex-end;
+}
+.img {
+  height: 100px;
+  margin-right: 10px;
+  width: 100px;
+  margin-top: 5vh;
+  margin-bottom:5vh;
+  border-radius: 50%;
+  border: 9px solid #ffffff;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+ }
  .details{
-  margin-left: 10px;
+   margin-left: 10px;
    font-size: 30px;
    padding: 5vh; 
    text-align: center;
  }
- 
 @media only screen and (max-width: 1000px) 
   {
     h1
@@ -507,15 +508,25 @@ h1:nth-child(2) {
   }
 @media only screen and (max-width: 800px) 
   {
+
+    .video iframe{
+      border-radius: 3vw;
+      width:60vw;
+      height:30vw;
+      margin: 2vh 0 10vh 0;
+
+    }
+
     .oasislogo{
       position: absolute;
       left: calc(100% - 180px - 8vw);
+      margin-top:vh;
       width: 180px;
       height:auto;
   }
-    .links
+    .nav
     {
-        display: block;
+        display: none;
     }
     h1
     {
@@ -547,8 +558,8 @@ h1:nth-child(2) {
     width: 40px;
     height: 32px;
     position: absolute;
-    top:20px;
-    left:-6px;
+    top:5px;
+    left:-5px;
     cursor: pointer;
     opacity: 0;
     z-index: 2;
@@ -594,19 +605,17 @@ h1:nth-child(2) {
   }
   #menu
   {
-    display:block;
     position: absolute;
-    left:-4vw;
-    top:-120vh;
-    width: 100vw;
-    height:100vh;
-    margin: 0px 0 0 0px;
-    padding: 0px;
+    width: calc(100vw - 50px);
+    height:auto;
+    margin: -100px 0 0 -50px;
+    padding: 50px;
     padding-top: 125px;
-    background: black; 
+    background: black;
     list-style-type: none;
-    
-    }
+    display:none;
+    opacity:0;
+  }
   .aboutushead{
     font-size:50px;
   }
@@ -618,6 +627,10 @@ h1:nth-child(2) {
   }
   .details{
     font-size: 15px;
+  }
+  .img{
+    width: 80px;
+    height:80px;
   }
   .roundshead{
     font-size:50px;
@@ -660,11 +673,12 @@ h1:nth-child(2) {
     text-decoration: none;
   
   }
-  .video iframe{
-    border-radius: 30px;
-    width:80vw;
-    height:45vw;
-    margin: 2vh 0 10vh 0;
+  
+  .header input:checked ~ #menu
+  {
+    display:block;
+    height: 85vh;
+    opacity:1;
   }
   .nav:hover{
     border:none;
@@ -687,3 +701,4 @@ h1:nth-child(2) {
       font-size: 24px;
     }
   }
+
