--- a/rocktaves2019.css
+++ b/rocktaves2019.css
@@ -225,11 +225,11 @@ body{
   left:50%;
   position: absolute;
   background: #fff;
-  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  transition: width 0.1s ease 0s, left 0.1s ease 0s;
   width: 0;
 }
 .nav:hover:after { 
-  width: 90%;  
+  width: calc(100% - 20px);  
   left:0;
 }
 .links:hover{
