--- a/rocktaves2019.css
+++ b/rocktaves2019.css
@@ -670,6 +670,12 @@ h1:nth-child(2) {
     border:none;
     color:white;
   }
+
+  .blank2{
+    height: 0;
+    margin: 0;
+    padding: 0;
+  }
 }
 @media only screen and (max-width: 350px) 
   {
