--- a/rocktaves2019.css
+++ b/rocktaves2019.css
@@ -317,7 +317,7 @@ h1:nth-child(2) {
     padding-bottom: 2vh;
     text-align: center;
     font-size: 70px;
-    font-family:'Bebas Neue';
+    font-family: bebas-neue, sans-serif;
 }
 .aboutuscont{
     width: 80vw;
@@ -355,7 +355,7 @@ h1:nth-child(2) {
     padding-top: 6vh;
     text-align: center;
     font-size: 70px;
-    font-family: 'Bebas Neue';
+    font-family: bebas-neue, sans-serif;
 }
 .procedure{
   display: block;
@@ -479,7 +479,7 @@ h1:nth-child(2) {
   padding-bottom: 4vh;
   text-align: center;
   font-size: 70px;
-  font-family: 'Bebas Neue';
+  font-family: bebas-neue, sans-serif;
 }
 
 .contact{
